--- a/src/app/views/components/login/login.component.scss
+++ b/src/app/views/components/login/login.component.scss
@@ -2,260 +2,165 @@
 @import "primeicons/primeicons.css";
 
 :host ::ng-deep {
-  .p-card {
-    width: 400px;
+  .p-inputtext {
+    width: 245px;
+    min-height: 45px;
+    color: #212121;
+    outline: none;
+    transition: 0.35s;
+    padding: 0 7px;
+    background: #FFFFFE;
+    border-radius: 6px;
+    border: 2px solid #2E5C6E;
+    font-size: 1rem;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  }
+
+  .p-inputtext::placeholder {
+    color: #999;
+  }
+
+  .p-inputtext:focus.p-inputtext::placeholder {
+    transition: 0.3s;
+    opacity: 0;
+  }
+
+  .p-inputtext:focus, .p-inputtext:hover {
+    transform: scale(1.05);
+    box-shadow: 6px 6px 10px #2E5C6E,
+    1px 1px 10px #ABABAB;
+    border: 2px solid #2E5C6E;
+    background: #FFFFFF;
+  }
+
+  .p-button {
+    padding: 0 32px;
+    background: #FFFFFE;
+    background-size: 400%;
+    color: #212121;
+    border: none;
+    width: 7em;
+    height: 2.5em;
+    border-radius: 30px;
+    font-size: 15px;
+    font-family: inherit;
+    overflow: hidden;
+    box-shadow: 6px 6px 12px #c5c5c5,
+    -6px -6px 12px #ffffff;
+  }
+
+  .p-button:hover {
+    transform: scale(1.05);
+    box-shadow: 1px 1px 3px #b5b5b5,
+    -1px -1px 3px #ffffff;
+    background: #FFFFFE;
+    border: 2px #b5b5b5;
+  }
+
+  .p-button:hover::before {
+    transform: scaleX(1);
+    width: 9em;
+  }
+
+  .p-button::before {
+    transform: scaleX(0);
+    transform-origin: 0 50%;
+    transition: all 0.475s;
+    box-shadow: 1px 1px 3px #b5b5b5,
+    -1px -1px 3px #ffffff;
+    content: '';
+    width: 0;
+    height: inherit;
+    border-radius: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(to right, #0CABA8 0%, #2E5C6E 100%);
+    display: block;
+    z-index: -1;
+  }
+
+  .p-button:active {
+    transform: scale(1.05);
+    box-shadow: inset 3px 3px 6px #b5b5b5,
+    inset -3px -3px 6px #ffffff;
   }
 }
+
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background: #f6f5f7;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  font-family: 'Montserrat', sans-serif;
-  height: 100vh;
-  margin: -20px 0 50px;
-}
-
-h1 {
-  font-weight: bold;
-  margin: 0;
-}
-
-h2 {
-  text-align: center;
-}
-
-p {
-  font-size: 14px;
-  font-weight: 100;
-  line-height: 20px;
-  letter-spacing: 0.5px;
-  margin: 20px 0 30px;
-}
-
-span {
-  font-size: 12px;
-}
-
-a {
-  color: #333;
-  font-size: 14px;
-  text-decoration: none;
-  margin: 15px 0;
-}
-
-button {
-  border-radius: 20px;
-  border: 1px solid #ff4b2b;
-  background-color: #ff4b2b;
-  color: #ffffff;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 12px 45px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  transition: transform 80ms ease-in;
-}
-
-button:active {
-  transform: scale(0.95);
-}
-
-button:focus {
-  outline: none;
-}
-
-button.ghost {
-  background-color: transparent;
-  border-color: #ffffff;
-}
-
-form {
-  background-color: #ffffff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0 50px;
-  height: 100%;
-  text-align: center;
-}
-
-input {
-  background-color: #eee;
-  border: none;
-  padding: 12px 15px;
-  margin: 8px 0;
-  width: 100%;
-}
-
 .container {
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  position: relative;
-  overflow: hidden;
-  width: 768px;
-  max-width: 100%;
-  min-height: 480px;
-}
-
-.form-container {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  transition: all 0.6s ease-in-out;
-}
-
-.sign-in-container {
-  left: 0;
-  width: 50%;
-  z-index: 2;
-}
-
-.container.right-panel-active .sign-in-container {
-  transform: translateX(100%);
-}
-
-.sign-up-container {
-  left: 0;
-  width: 50%;
-  opacity: 0;
-  z-index: 1;
-}
-
-.container.right-panel-active .sign-up-container {
-  transform: translateX(100%);
-  opacity: 1;
-  z-index: 5;
-  animation: show 0.6s;
-}
-
-@keyframes show {
-  0%,
-  49.99% {
-    opacity: 0;
-    z-index: 1;
-  }
-
-  50%,
-  100% {
-    opacity: 1;
-    z-index: 5;
-  }
-}
-
-.overlay-container {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 50%;
-  height: 100%;
-  overflow: hidden;
-  transition: transform 0.6s ease-in-out;
-  z-index: 100;
-}
-
-.container.right-panel-active .overlay-container {
-  transform: translateX(-100%);
-}
-
-.overlay {
-  background: #ff416c;
-  background: -webkit-linear-gradient(to right, #ff4b2b, #ff416c);
-  background: linear-gradient(to right, #ff4b2b, #ff416c);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 0 0;
-  color: #ffffff;
-  position: relative;
-  left: -100%;
-  height: 100%;
-  width: 200%;
-  transform: translateX(0);
-  transition: transform 0.6s ease-in-out;
-}
-
-.container.right-panel-active .overlay {
-  transform: translateX(50%);
-}
-
-.overlay-panel {
-  position: absolute;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  margin-top: 7cm;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform-style: preserve-3d;
+  margin-top: 5%;
+  transition: .4s ease-in-out;
+  border-radius: 30px;
+}
+
+.form .form_front {
+  display: flex;
   flex-direction: column;
-  padding: 0 40px;
-  text-align: center;
-  top: 0;
-  height: 100%;
-  width: 50%;
-  transform: translateX(0);
-  transition: transform 0.6s ease-in-out;
-}
-
-.overlay-left {
-  transform: translateX(-20%);
-}
-
-.container.right-panel-active .overlay-left {
-  transform: translateX(0);
-}
-
-.overlay-right {
-  right: 0;
-  transform: translateX(0);
-}
-
-.container.right-panel-active .overlay-right {
-  transform: translateX(20%);
-}
-
-.social-container {
-  margin: 20px 0;
-}
-
-.social-container a {
-  border: 1px solid #dddddd;
-  border-radius: 50%;
-  display: inline-flex;
   justify-content: center;
   align-items: center;
-  margin: 0 5px;
-  height: 40px;
-  width: 40px;
+  gap: 20px;
+  position: absolute;
+  backface-visibility: hidden;
+  padding: 65px 45px;
+  border-radius: 20px;
+  box-shadow: 12px 18px 30px rgba(0, 0, 0, 0.2);
+  background: #FFFFFF;
 }
 
-footer {
-  background-color: #222;
-  color: #fff;
-  font-size: 14px;
-  bottom: 0;
-  position: fixed;
-  left: 0;
-  right: 0;
-  text-align: center;
-  z-index: 999;
+.form .form_back {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  position: absolute;
+  backface-visibility: hidden;
+  transform: rotateY(-180deg);
+  padding: 65px 45px;
+  border-radius: 20px;
+  box-shadow: 12px 18px 30px rgba(0, 0, 0, 0.2);
+  background: #FFFFFF;
 }
 
-footer p {
-  margin: 10px 0;
+.form_details {
+  font-size: 25px;
+  font-weight: 600;
+  padding-bottom: 5px;
 }
 
-footer i {
-  color: red;
+.form .switch {
+  font-size: 13px;
 }
 
-footer a {
-  color: #3c97bf;
-  text-decoration: none;
+.form .switch .signup_tog {
+  font-weight: 700;
+  cursor: pointer;
+  text-decoration-line: underline;
+}
+
+.container #signup_toggle {
+  display: none;
+}
+
+.container #signup_toggle:checked + .form {
+  transform: rotateY(-180deg);
+}
+
+.img{
+  margin-top: -10%;
+  margin-bottom: -10%;
 }
 
