--- a/src/app/views/features/order/order.component.html
+++ b/src/app/views/features/order/order.component.html
@@ -52,7 +52,7 @@
               <p-button icon="pi pi-eye" styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
               <p-button (click)="showDialog('edit',order)" icon="pi pi-pencil"
                         styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
-              <p-button icon="pi pi-trash"
+              <p-button icon="pi pi-trash" (click)="deleteOrderRequest(order.order_id)"
                         styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
             </td>
           </tr>
@@ -118,7 +118,7 @@
       <div class="col-6"></div>
       <div class="col-12">
         <div class="field">
-          <label>產品描述</label>
+          <label>描述</label>
           <textarea [rows]="5" pInputTextarea formControlName="describe"></textarea>
         </div>
       </div>
@@ -158,7 +158,12 @@
       </div>
     </div>
     <div class="flex justify-content-end">
-      <p-button label="儲存" styleClass="p-button-outlined p-button-info"></p-button>
+      <ng-container *ngIf="!showedit">
+        <p-button label="新增" (click)="postOrderRequest()" styleClass="p-button-outlined p-button-info"></p-button>
+      </ng-container>
+      <ng-container *ngIf="showedit">
+        <p-button label="儲存" (click)="patchOrderRequest(o_id)"  styleClass="p-button-outlined p-button-info"></p-button>
+      </ng-container>
       <p-button label="取消" (click)="edit=false" styleClass="p-button-secondary ml-1"></p-button>
     </div>
   </p-dialog>
