--- a/src/app/views/features/order/order.component.html
+++ b/src/app/views/features/order/order.component.html
@@ -74,8 +74,8 @@
       <div class="col-6">
         <div class="field">
           <label><span class="required-star">*</span>契約號碼</label>
-          <p-dropdown placeholder="搜尋契約" [disabled]="true" formControlName="contract_code"
-                      appendTo="body" [options]="GetAllContract" [(ngModel)]="selectedContract_id"
+          <p-dropdown placeholder="搜尋契約" [disabled]="true" formControlName="contract_code" appendTo="body" [options]="GetAllContract"
+                      [(ngModel)]="selectedContract_id" (ngModelChange)="validateStartDate()"
                       [ngClass]="{'ng-dirty': order_form.controls['contract_code'].hasError && order_form.controls['contract_code'].touched}"
           ></p-dropdown>
         </div>
@@ -91,9 +91,9 @@
         <div class="field">
           <label><span class="required-star">*</span>訂單開始日期</label>
           <p-calendar [appendTo]="'body'" dateFormat="yy-mm-dd" [showButtonBar]="true" formControlName="start_date"
-                      (ngModelChange)="validateStartDate()" [minDate]="minDate"
+                      (ngModelChange)="validateStartDate()" [minDate]="MinDate"
                       [ngClass]="{'ng-dirty':order_form.controls['start_date'].hasError && order_form.controls['start_date'].touched}"></p-calendar>
-          <div *ngIf="order_form.controls['start_date'].hasError('dateError')">訂單日期不可早於契約日期</div>
+          <div class="required-star" *ngIf="order_form.controls['start_date'].hasError('dateError')">訂單日期不可早於契約日期</div>
         </div>
       </div>
       <div class="col-6" *ngIf="!showedit">
