--- a/src/app/views/features/campaign/campaign.component.html
+++ b/src/app/views/features/campaign/campaign.component.html
@@ -7,7 +7,10 @@
           <p-button (click)="showDialog('add')" icon="pi pi-plus" styleClass="p-button-text"></p-button>
         </span>
       </div>
-      <p-table [rowsPerPageOptions]="[5, 10, 15]" [value]="filteredCampaigns" [paginator]="true" [rows]="5" [totalRecords]="100" [currentPageReportTemplate]="'Showing {first} to {last} of {totalRecords} entries'">
+      <p-table [rowsPerPageOptions]="[5, 10, 15]" [(first)]="first" [showCurrentPageReport]="true"
+               [loading]="loading" [globalFilterFields]="['status','start_date']" (onLazyLoad)="loadTable($event)"
+               [value]="GetAllCampaign" [paginator]="true" [rows]="5" [lazy]="true" [totalRecords]="totalRecords"
+               currentPageReportTemplate="從 {first} 到 {last} 筆，共 {totalRecords} 筆">
         <ng-template pTemplate="caption">
           <div class="flex">
             <span class="p-input-icon-left ml-auto">
@@ -24,7 +27,7 @@
             <th pSortableColumn="status">狀態<p-sortIcon field="status"></p-sortIcon></th>
             <th pSortableColumn="start_date">開始時間<p-sortIcon field="start_date"></p-sortIcon></th>
             <th pSortableColumn="end_date">結束時間<p-sortIcon field="end_date"></p-sortIcon></th>
-            <th pSortableColumn="owner">業務員<p-sortIcon field="owner"></p-sortIcon></th>
+            <th pSortableColumn="owner">業務<p-sortIcon field="owner"></p-sortIcon></th>
             <th pSortableColumn="sent">成員已回應<p-sortIcon field="sent"></p-sortIcon></th>
             <th></th>
           </tr>
@@ -32,20 +35,21 @@
         <ng-template pTemplate="body" let-campaign>
           <tr>
             <td>{{ campaign.name }}</td>
-            <td>{{ campaign.patrilineal_name }}</td>
+            <td>{{ campaign.parent_campaign_id }}</td>
             <td>{{ campaign.type }}</td>
             <td>{{ campaign.status }}</td>
             <td>{{ campaign.start_date }}</td>
             <td>{{ campaign.end_date }}</td>
             <td>{{ campaign.owner }}</td>
             <td>{{ campaign.member }}</td>
-            <td class="icon-align-right"><p-button icon="pi pi-eye" pTooltip="檢視" tooltipPosition="top"
+            <td class="icon-align-right flex mt-1"><p-button icon="pi pi-eye" pTooltip="檢視" tooltipPosition="top"
                 styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
-              <p-button (click)="showDialog('edit',campaign)" icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top"
+            <p-button (click)="showDialog('edit',campaign)" icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top"
                 styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
-              <p-button icon="pi pi-trash" pTooltip="刪除" tooltipPosition="top"
-                styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
-            </td>
+            <p-button icon="pi pi-trash" pTooltip="刪除" tooltipPosition="top"
+                      (click)="deleteCampaignRequest(c_id)"
+                styleClass="p-button-rounded p-button-secondary p-button-text"></p-button></td>
+
           </tr>
         </ng-template>
       </p-table>
@@ -64,7 +68,7 @@
       </div>
       <div class="col-6">
         <div class="field">
-          <label>業務負責人</label>
+          <label>業務</label>
           <br>
           <label class="mt-2 ml-2 disable">{{(campaign_form.controls['owner'].value)}}</label>
         </div>
@@ -73,7 +77,8 @@
         <div class="field">
           <label>啟用</label>
           <br>
-          <p-checkbox formControlName="enable" value="enable" [binary]="true"></p-checkbox>
+          <p-checkbox formControlName="is_enable" value="is_enable" [binary]="true"
+                      (onChange)="onIsEnableChange($event)"></p-checkbox>
         </div>
       </div>
       <div class="col-6" *ngIf="!showedit">
@@ -94,7 +99,7 @@
         <div class="field">
           <label>父系行銷活動</label>
           <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body"
-            formControlName="patrilineal_name"></p-dropdown>
+            formControlName="parent_campaign_id"></p-dropdown>
         </div>
       </div>
       <div class="col-6">
@@ -128,33 +133,37 @@
       <div class="col-6">
         <div class="field">
           <label>已傳送數目</label>
-          <input type="text" pInputText formControlName="sent" />
+          <p-inputNumber class="w-full"  formControlName="sent" [minFractionDigits]="0">
+          </p-inputNumber>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
           <label>預算成本</label>
-          <input type="text" pInputText formControlName="budget_cost" />
+          <p-inputNumber class="w-full" mode="currency" currency="TWD" formControlName="budget_cost" [minFractionDigits]="0">
+          </p-inputNumber>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
           <label>預期回應 (%)</label>
           <br>
-          <p-inputNumber class="w-full" inputId="percent" formControlName="responses" suffix="%">
+          <p-inputNumber class="w-full" inputId="percent" formControlName="expected_responses" suffix="%">
           </p-inputNumber>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
           <label>實際成本</label>
-          <input type="text" pInputText formControlName="actual_cost" />
+          <p-inputNumber class="w-full" mode="currency" currency="TWD" formControlName="actual_cost" [minFractionDigits]="0">
+          </p-inputNumber>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
           <label>預期收入</label>
-          <input type="text" pInputText formControlName="expected_income" />
+          <p-inputNumber class="w-full" mode="currency" currency="TWD" formControlName="expected_income" [minFractionDigits]="0">
+          </p-inputNumber>
         </div>
       </div>
       <div class="col-6"></div>
@@ -175,9 +184,14 @@
         </div>
       </div>
     </div>
-    <ng-template pTemplate="footer">
-      <p-button label="新增" (click)="visible = false" styleClass="p-button-outlined p-button-info"></p-button>
-      <p-button label="取消" (click)="visible = false" styleClass="p-button-secondary ms-1"></p-button>
-    </ng-template>
+    <div class="flex justify-content-end">
+      <ng-container *ngIf="!showedit">
+        <p-button label="新增" (click)="postCampaignRequest()" styleClass="p-button-outlined p-button-info"></p-button>
+      </ng-container>
+      <ng-container *ngIf="showedit">
+        <p-button label="儲存" (click)="patchCampaignRequest(c_id)"  styleClass="p-button-outlined p-button-info"></p-button>
+      </ng-container>
+      <p-button label="取消" (click)="visible=false" styleClass="p-button-secondary ml-1"></p-button>
+    </div>
   </p-dialog>
 </form>
