--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -22,7 +22,8 @@
         </span>
         </div>
       </div>
-      <p-table [value]="filteredLead">
+      <p-table [value]="getData" [lazy]="true" [totalRecords]="total" [rows]="10" [paginator]="true"
+               (onLazyLoad)="loadPostsLazy($event)">
         <ng-template pTemplate="caption">
           <div class="flex">
             <span class="p-input-icon-left ml-auto">
@@ -36,24 +37,33 @@
             <th pSortableColumn="status">狀態
               <p-sortIcon field="status"></p-sortIcon>
             </th>
-            <th pSortableColumn="name">姓名
+<!--            <th pSortableColumn="name">姓名-->
+<!--              <p-sortIcon field="name"></p-sortIcon>-->
+<!--            </th>-->
+            <th pSortableColumn="name">描述
               <p-sortIcon field="name"></p-sortIcon>
             </th>
             <th pSortableColumn="account_name">公司
               <p-sortIcon field="account_name"></p-sortIcon>
             </th>
-            <th pSortableColumn="phone_number">電話
-              <p-sortIcon field="phone_number"></p-sortIcon>
+            <th pSortableColumn="account_name">分級
+              <p-sortIcon field="account_name"></p-sortIcon>
             </th>
-            <th pSortableColumn="cell_phone">行動電話
-              <p-sortIcon field="cell_phone"></p-sortIcon>
+            <th pSortableColumn="account_name">線索來源
+              <p-sortIcon field="account_name"></p-sortIcon>
             </th>
-            <th pSortableColumn="email">電子郵件
-              <p-sortIcon field="email"></p-sortIcon>
-            </th>
-            <th pSortableColumn="line">LINE
-              <p-sortIcon field="line"></p-sortIcon>
-            </th>
+<!--            <th pSortableColumn="phone_number">電話-->
+<!--              <p-sortIcon field="phone_number"></p-sortIcon>-->
+<!--            </th>-->
+<!--            <th pSortableColumn="cell_phone">行動電話-->
+<!--              <p-sortIcon field="cell_phone"></p-sortIcon>-->
+<!--            </th>-->
+<!--            <th pSortableColumn="email">電子郵件-->
+<!--              <p-sortIcon field="email"></p-sortIcon>-->
+<!--            </th>-->
+<!--            <th pSortableColumn="line">LINE-->
+<!--              <p-sortIcon field="line"></p-sortIcon>-->
+<!--            </th>-->
             <th pSortableColumn="owner">業務員
               <p-sortIcon field="owner"></p-sortIcon>
             </th>
@@ -70,12 +80,15 @@
                 'text-green-300': lead.status === status[4].name
             }" class="pi pi-circle-fill ml-2"></span>
             </td>
-            <td>{{ lead.name }}</td>
-            <td>{{ lead.company_name }}</td>
-            <td>{{ lead.phone_number }}</td>
-            <td>{{ lead.cell_phone }}</td>
-            <td>{{ lead.email }}</td>
-            <td>{{ lead.line }}</td>
+<!--            <td>{{ lead.name }}</td>-->
+            <td>{{ lead.description }}</td>
+            <td>{{ lead.account_name }}</td>
+            <td>{{ lead.rating }}</td>
+            <td>{{ lead.source }}</td>
+<!--            <td>{{ lead.phone_number }}</td>-->
+<!--            <td>{{ lead.cell_phone }}</td>-->
+<!--            <td>{{ lead.email }}</td>-->
+<!--            <td>{{ lead.line }}</td>-->
             <td>{{ lead.owner }}</td>
             <td>
               <div class="flex justify-content-end">
@@ -83,7 +96,7 @@
                           styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
                 <p-button (click)="showDialog('edit',lead)" icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top"
                           styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
-                <p-button icon="pi pi-trash" pTooltip="刪除" tooltipPosition="top"
+                <p-button (click)="deleteLead(lead.lead_id)" icon="pi pi-trash" pTooltip="刪除" tooltipPosition="top"
                           styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
               </div>
 
@@ -103,7 +116,7 @@
       <div class="col-6">
         <div class="field">
           <label><span class="text-red-600">*</span>線索狀態</label>
-          <p-dropdown placeholder="請選擇" [disabled]="true" optionLabel="name" [options]="status"
+          <p-dropdown placeholder="請選擇" optionLabel="name" [options]="status"
                       formControlName="status" appendTo="body" (onChange)="statusValue($event)"
                       [ngClass]="{'ng-dirty':lead_form.controls['status'].hasError && lead_form.controls['status'].touched}"
           ></p-dropdown>
@@ -121,7 +134,7 @@
         <div class="field">
           <label><span class="text-red-600">*</span>帳戶</label>
           <p-dropdown [options]="account" (onChange)="accountValue($event)" optionLabel="name" [filter]="true"
-                      filterBy="name" [showClear]="true" placeholder="選擇現有帳戶">
+                      filterBy="name" [showClear]="true" placeholder="選擇現有帳戶" formControlName="account_name">
             <ng-template pTemplate="account">
               <div class="flex align-items-center gap-2" *ngIf="account">
                 <div>{{ account.name }}</div>
@@ -144,7 +157,7 @@
       <div class="col-12">
         <div>
           <label><span class="text-red-600">*</span>描述</label>
-          <textarea class="mt-2" rows="3" pInputTextarea></textarea>
+          <textarea class="mt-2" rows="3" pInputTextarea formControlName="description"></textarea>
         </div>
       </div>
       <div class="col-6">
@@ -158,7 +171,7 @@
         <div class="field">
           <label>線索來源</label>
           <p-dropdown placeholder="請選擇" [disabled]="true" [options]="source" optionLabel="name"
-                      (onChange)="leadSourceValue($event)" formControlName="source" appendTo="body"></p-dropdown>
+                      (onChange)="sourceValue($event)" formControlName="source" appendTo="body"></p-dropdown>
         </div>
       </div>
     </div>
@@ -183,6 +196,15 @@
         </div>
       </div>
     </ng-container>
+    <div class="flex justify-content-end mt-3">
+      <ng-container *ngIf="dialogHeader === '編輯線索'">
+        <p-button label="儲存" (click)="patchLead();edit=false" styleClass="p-button-outlined p-button-info"></p-button>
+      </ng-container>
+      <ng-container *ngIf="dialogHeader !== '編輯線索'">
+        <p-button label="新增" (click)="postLead();edit=false" styleClass="p-button-outlined p-button-info"></p-button>
+      </ng-container>
+      <p-button label="取消" (click)="edit=false" styleClass="p-button-secondary ml-1"></p-button>
+    </div>
   </p-dialog>
   <p-menu #type [model]="account_type" [popup]="true"></p-menu>
 </form>
