fix: 商品/服務 名稱or價錢為空仍可新增

--- a/src/app/views/features/product/product.component.html
+++ b/src/app/views/features/product/product.component.html
@@ -87,7 +87,7 @@
         <div class="field">
           <label>已啟用</label>
           <br>
-          <p-checkbox formControlName="enable" value="enable" [binary]="true"></p-checkbox>
+          <p-checkbox formControlName="is_enable" value="is_enable" [binary]="true"></p-checkbox>
         </div>
       </div>
       <!-- <div class="col-6">
