--- a/src/app/views/features/quote/quote.component.html
+++ b/src/app/views/features/quote/quote.component.html
@@ -70,23 +70,18 @@
       </div>
       <div class="col-6">
         <div class="field">
-          <label>商機</label>
+          <label><span class="required-star">*</span>商機</label>
           <p-dropdown placeholder="搜尋商機" [options]="GetAllOpportunity" [formControlName]="'opportunity_id'" [(ngModel)]="selectedOpportunity_id"
+                [filter]="true"  filterBy="label" [showClear]="true"
                       [ngClass]="{'ng-dirty':quote_form.controls['opportunity_id'].hasError && quote_form.controls['opportunity_id'].touched}"></p-dropdown>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
-          <label>帳戶</label>
+          <label><span class="required-star">*</span>帳戶</label>
           <p-dropdown placeholder="搜尋帳戶" [options]="GetAllAccount" [formControlName]="'account_id'" [(ngModel)]="selectedAccount_id"
+          [filter]="true"  filterBy="label" [showClear]="true"
                       [ngClass]="{'ng-dirty':quote_form.controls['account_id'].hasError && quote_form.controls['account_id'].touched}"></p-dropdown>
-        </div>
-      </div>
-      <div class="col-6">
-        <div class="field">
-          <label>同步到商機</label>
-          <br>
-          <p-checkbox formControlName="is_syncing" value="is_syncing" [binary]="true"></p-checkbox>
         </div>
       </div>
       <div class="col-6" *ngIf="!showedit">
@@ -94,6 +89,13 @@
           <label>狀態</label>
           <br>
           <label class="mt-2 ml-2" [textContent]="quote_form.controls['status'].value"></label>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label>同步到商機</label>
+          <br>
+          <p-checkbox formControlName="is_syncing" value="is_syncing" [binary]="true"></p-checkbox>
         </div>
       </div>
       <div class="col-6" *ngIf="showedit">
