--- a/src/app/views/features/order/order.component.html
+++ b/src/app/views/features/order/order.component.html
@@ -76,6 +76,7 @@
           <label><span class="required-star">*</span>契約號碼</label>
           <p-dropdown placeholder="搜尋契約" [disabled]="true" formControlName="contract_code" appendTo="body" [options]="GetAllContract"
                       [(ngModel)]="selectedContract_id" (ngModelChange)="validateStartDate()"
+                      [filter]="true"  filterBy="label" [showClear]="true"
                       [ngClass]="{'ng-dirty': order_form.controls['contract_code'].hasError && order_form.controls['contract_code'].touched}"
           ></p-dropdown>
         </div>
@@ -84,6 +85,7 @@
         <div class="field">
           <label><span class="required-star">*</span>帳戶</label>
           <p-dropdown placeholder="搜尋帳戶" [options]="GetAllAccount" [formControlName]="'account_id'" [(ngModel)]="selectedAccount_id"
+          [filter]="true"  filterBy="label" [showClear]="true"
                       [ngClass]="{'ng-dirty':order_form.controls['account_id'].hasError && order_form.controls['account_id'].touched}"></p-dropdown>
         </div>
       </div>
