fix: 行銷活動 必填選項為空仍可新增

--- a/src/app/views/features/campaign/campaign.component.html
+++ b/src/app/views/features/campaign/campaign.component.html
@@ -35,7 +35,7 @@
         <ng-template pTemplate="body" let-campaign>
           <tr>
             <td>{{ campaign.name }}</td>
-            <td>{{ campaign.parent_campaign_id }}</td>
+            <td>{{ campaign.parent_campaign_name }}</td>
             <td>{{ campaign.type }}</td>
             <td>{{ campaign.status }}</td>
             <td>{{ campaign.start_date }}</td>
