--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -37,9 +37,9 @@
             <th pSortableColumn="status">狀態
               <p-sortIcon field="status"></p-sortIcon>
             </th>
-<!--            <th pSortableColumn="name">姓名-->
-<!--              <p-sortIcon field="name"></p-sortIcon>-->
-<!--            </th>-->
+            <!--            <th pSortableColumn="name">姓名-->
+            <!--              <p-sortIcon field="name"></p-sortIcon>-->
+            <!--            </th>-->
             <th pSortableColumn="name">描述
               <p-sortIcon field="name"></p-sortIcon>
             </th>
@@ -52,18 +52,18 @@
             <th pSortableColumn="account_name">線索來源
               <p-sortIcon field="account_name"></p-sortIcon>
             </th>
-<!--            <th pSortableColumn="phone_number">電話-->
-<!--              <p-sortIcon field="phone_number"></p-sortIcon>-->
-<!--            </th>-->
-<!--            <th pSortableColumn="cell_phone">行動電話-->
-<!--              <p-sortIcon field="cell_phone"></p-sortIcon>-->
-<!--            </th>-->
-<!--            <th pSortableColumn="email">電子郵件-->
-<!--              <p-sortIcon field="email"></p-sortIcon>-->
-<!--            </th>-->
-<!--            <th pSortableColumn="line">LINE-->
-<!--              <p-sortIcon field="line"></p-sortIcon>-->
-<!--            </th>-->
+            <!--            <th pSortableColumn="phone_number">電話-->
+            <!--              <p-sortIcon field="phone_number"></p-sortIcon>-->
+            <!--            </th>-->
+            <!--            <th pSortableColumn="cell_phone">行動電話-->
+            <!--              <p-sortIcon field="cell_phone"></p-sortIcon>-->
+            <!--            </th>-->
+            <!--            <th pSortableColumn="email">電子郵件-->
+            <!--              <p-sortIcon field="email"></p-sortIcon>-->
+            <!--            </th>-->
+            <!--            <th pSortableColumn="line">LINE-->
+            <!--              <p-sortIcon field="line"></p-sortIcon>-->
+            <!--            </th>-->
             <th pSortableColumn="owner">業務員
               <p-sortIcon field="owner"></p-sortIcon>
             </th>
@@ -80,15 +80,15 @@
                 'text-green-300': lead.status === status[4].name
             }" class="pi pi-circle-fill ml-2"></span>
             </td>
-<!--            <td>{{ lead.name }}</td>-->
+            <!--            <td>{{ lead.name }}</td>-->
             <td>{{ lead.description }}</td>
             <td>{{ lead.account_name }}</td>
             <td>{{ lead.rating }}</td>
             <td>{{ lead.source }}</td>
-<!--            <td>{{ lead.phone_number }}</td>-->
-<!--            <td>{{ lead.cell_phone }}</td>-->
-<!--            <td>{{ lead.email }}</td>-->
-<!--            <td>{{ lead.line }}</td>-->
+            <!--            <td>{{ lead.phone_number }}</td>-->
+            <!--            <td>{{ lead.cell_phone }}</td>-->
+            <!--            <td>{{ lead.email }}</td>-->
+            <!--            <td>{{ lead.line }}</td>-->
             <td>{{ lead.owner }}</td>
             <td>
               <div class="flex justify-content-end">
@@ -133,18 +133,8 @@
       <div class="col-6">
         <div class="field">
           <label><span class="text-red-600">*</span>帳戶</label>
-          <p-dropdown [options]="account" (onChange)="accountValue($event)" optionLabel="name" [filter]="true"
-                      filterBy="name" [showClear]="true" placeholder="選擇現有帳戶" formControlName="account_name">
-            <ng-template pTemplate="account">
-              <div class="flex align-items-center gap-2" *ngIf="account">
-                <div>{{ account.name }}</div>
-              </div>
-            </ng-template>
-            <ng-template let-account pTemplate="item">
-              <div class="flex align-items-center gap-2">
-                <div>{{ account.name }}</div>
-              </div>
-            </ng-template>
+          <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)" formControlName="account_name" [filter]="true"
+                      filterBy="label" [showClear]="true" placeholder="選擇現有帳戶">
           </p-dropdown>
         </div>
       </div>
