--- a/src/app/views/features/event/event.component.html
+++ b/src/app/views/features/event/event.component.html
@@ -4,21 +4,15 @@
       <h2>行事曆</h2>
     </span>
     <full-calendar [options]="options"></full-calendar>
-
-    <div class="card flex justify-content-center">
-      <form [formGroup]="event_form">
-        <p-multiSelect [options]="main" formControlName="main" optionLabel="name"></p-multiSelect>
-      </form>
-    </div>
     <div class="field mt-2">
-      <label><span class="reddot"></span>紅色: 今日</label>
-      <label><span class="orangedot"></span>橙色: 客戶拜訪</label>
-      <label><span class="yellowdot"></span>黃色: 電話</label>
-      <label><span class="greendot"></span>綠色: 會議</label>
-      <label><span class="bluedot"></span>藍色: 研討會</label>
-      <label><span class="cornflowerbluedot"></span>靛色: 行銷</label>
-      <label><span class="purpledot"></span>紫色: 年度拜訪</label>
-      <label><span class="pinkdot"></span>粉色: 其他</label>
+      <label><span class="reddot"></span>緊急事件</label>
+      <label><span class="orangedot"></span>客戶拜訪</label>
+      <label><span class="yellowdot"></span>電話</label>
+      <label><span class="greendot"></span>會議</label>
+      <label><span class="bluedot"></span>研討會</label>
+      <label><span class="cornflowerbluedot"></span>行銷</label>
+      <label><span class="purpledot"></span>年度拜訪</label>
+      <label><span class="pinkdot"></span>其他</label>
     </div>
   </div>
 </div>
@@ -36,10 +30,29 @@
         <div class="field">
           <label><span class="required-star">*</span>主要人員</label>
           <p-multiSelect [options]="main" placeholder="搜尋人員" formControlName="main" appendTo="body"
-                         optionLabel="name" display="chip" [defaultLabel]="selectedMainNames()"
+                         optionLabel="name" display="chip"
                          [ngClass]="{'ng-dirty':event_form.controls['main'].hasError && event_form.controls['main'].touched}">
 
           </p-multiSelect>
+        </div>
+      </div>
+      <!-- 如果勾選全天日期則p-calendar 只顯示開始日期且無時間選擇 -->
+      <div class="col-6" *ngIf="event_form.get('allday')?.value">
+        <div class="field">
+          <label><span class="required-star">*</span>開始</label>
+          <p-calendar #fullstartDate [appendTo]="'body'" dateFormat="yy-mm-dd"  [showTime]="true"
+                      [showButtonBar]="true" formControlName="fullstartDate" [readonlyInput]="true"
+                      selectionMode="range"
+                      [ngClass]="{'ng-dirty':event_form.controls['fullstartDate'].hasError && event_form.controls['fullstartDate'].touched}"></p-calendar>
+        </div>
+      </div>
+      <!-- 如果無勾選全天日期則p-calendar 顯示開始與結束日期，並開啟時間選擇 -->
+      <div class="col-6" *ngIf="!event_form.get('allday')?.value">
+        <div class="field">
+          <label><span class="required-star">*</span>開始</label>
+          <p-calendar [showTime]="true" #startDate [appendTo]="'body'" dateFormat="yy-mm-dd"
+                      [showButtonBar]="true" formControlName="start_date" [readonlyInput]="true"
+                      [ngClass]="{'ng-dirty':event_form.controls['start_date'].hasError && event_form.controls['start_date'].touched}"></p-calendar>
         </div>
       </div>
       <div class="col-6">
@@ -50,27 +63,10 @@
           </div>
         </div>
       </div>
-      <!-- 如果勾選全天日期則p-calendar 只顯示開始日期且無時間選擇 -->
-      <div class="col-6" *ngIf="event_form.get('allday')?.value">
-        <div class="field">
-          <label><span class="required-star">*</span>開始</label>
-          <p-calendar [appendTo]="'body'" #startDate dateFormat="yy-mm-dd"
-                      [showButtonBar]="true" formControlName="start_date"></p-calendar>
-        </div>
-      </div>
-      <!-- 如果無勾選全天日期則p-calendar 顯示開始與結束日期，並開啟時間選擇 -->
-      <div class="col-6" *ngIf="!event_form.get('allday')?.value">
-        <div class="field">
-          <label><span class="required-star">*</span>開始</label>
-          <p-calendar [showTime]="true" #startDate [appendTo]="'body'" [showSeconds]="true" dateFormat="yy-mm-dd"
-                      [showButtonBar]="true" formControlName="start_date" [readonlyInput]="true"
-                      [ngClass]="{'ng-dirty':event_form.controls['start_date'].hasError && event_form.controls['start_date'].touched}"></p-calendar>
-        </div>
-      </div>
       <div class="col-6" *ngIf="!event_form.get('allday')?.value">
         <div class="field">
           <label><span class="required-star">*</span>結束</label>
-          <p-calendar [showTime]="true" #endDate [appendTo]="'body'" [showSeconds]="true" dateFormat="yy-mm-dd"
+          <p-calendar [showTime]="true" #endDate [appendTo]="'body'" dateFormat="yy-mm-dd"
                       [showButtonBar]="true" formControlName="end_date"
                       [minDate]="event_form.controls['start_date'].value" [readonlyInput]="true"
                       [ngClass]="{'ng-dirty':event_form.controls['end_date'].hasError && event_form.controls['end_date'].touched}"></p-calendar>
@@ -88,7 +84,7 @@
         <div class="field">
           <label>參加成員</label>
           <p-multiSelect [options]="member" placeholder="搜尋人員" formControlName="member" appendTo="body"
-                         optionLabel="name" [defaultLabel]="selectedMemberNames()"
+                         optionLabel="name"
                          display="chip"></p-multiSelect>
         </div>
       </div>
@@ -115,6 +111,7 @@
     <ng-template pTemplate="footer">
       <p-button label="儲存" (click)="visible= false" styleClass="p-button-outlined p-button-info"></p-button>
       <p-button label="取消" (click)="visible= false" styleClass="p-button-secondary ml-1"></p-button>
+      <p-button label="刪除" (click)="visible= false" styleClass="p-button-outlined p-button-danger ml-1"></p-button>
     </ng-template>
   </p-dialog>
 </form>
