--- a/src/app/views/features/event/event.component.scss
+++ b/src/app/views/features/event/event.component.scss
@@ -18,7 +18,7 @@
 .yellowdot {
   height: 10px;
   width: 10px;
-  background-color: yellow;
+  background-color: burlywood;
   border-radius: 50%;
   display: inline-block;
   margin-right: 5px;
@@ -50,7 +50,7 @@
 .purpledot {
   height: 10px;
   width: 10px;
-  background-color: rebeccapurple;
+  background-color: plum;
   border-radius: 50%;
   display: inline-block;
   margin-right: 5px;
